--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,14 @@
     {% include head-custom.html %}
   </head>
   <body>
+    <div class="navbar">
+        <a class="active" href="/home">About</a>
+        <a href="/home">Software Engineering</a>
+        <a href="/home">Web Dev</a>
+        <a href="/home">Cryptography</a>
+        <a href="/home">Operating Systems</a>
+        <a href="/home">Digital Logic</a>
+    </div>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
