--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,27 @@
 ---
 
 @import 'jekyll-theme-cayman';
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.navbar a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #444;
+  color:black;
+}
+
+.navbar a.active {
+  background-color: #888;
+  color: #666;
+}
