--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
   <body>
     <div class="navbar">
         <a class="active" href="/home">About</a>
-        <a href="/home">Software Engineering</a>
-        <a href="/home">Web Dev</a>
-        <a href="/home">Cryptography</a>
-        <a href="/home">Operating Systems</a>
-        <a href="/home">Digital Logic</a>
+        <a href="/software">Software Engineering</a>
+        <a href="/web-dev">Web Dev</a>
+        <a href="/security">Cryptography</a>
+        <a href="/os">Operating Systems</a>
+        <a href="/digital-logic">Digital Logic</a>
     </div>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
