--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,11 +10,11 @@
 
 .navbar a {
   float: left;
-  color: #f2f2f2;
+  color: #555;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 24px;
 }
 
 .navbar a:hover {
