--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,12 +5,13 @@
 
 .navbar {
   background-color: #333;
+  color: #ccc;
   overflow: hidden;
 }
 
 .navbar a {
   float: left;
-  color: #555;
+  color: #000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
