--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="navbar">
-        <a class="active" href="/home">About</a>
+        <a class="active" href="/">About</a>
         <a href="/software">Software Engineering</a>
         <a href="/web-dev">Web Dev</a>
         <a href="/security">Cryptography</a>
