--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@
 
 .navbar a {
   float: left;
-  color: #000;
+  color: #ddd;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
