--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
         <a href="/web-dev">Web Dev</a>
         <a href="/security">Cryptography</a>
         <a href="/os">Operating Systems</a>
+        <a href="/assembly">Assembly</a>
         <a href="/digital-logic">Digital Logic</a>
     </div>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
